# Advent-of-Code

./: .gitignore
2021/day1/part1/: part1.py
2021/day1/part2/: part2.py
2021/day2/part1/: part1.py
2021/day2/part2/: part2.py
2021/day3/part1/: part1.py
2023/day1/: part1.py  part2.py
2023/day2/: part1.py  part2.py
2024/day1/: part1.py  part1_packed.py  part2.py  part2_packed.py
2024/day10/: part1.py  part2.py
2024/day11/: part1.py  part2.py
2024/day12/: part1.py  part2.py
2024/day13/: part1.py  part2.py
2024/day2/: part1.py  part1_packed.py  part2.py  part2_packed.py
2024/day3/: part1.py  part1_packed.py  part2.py  part2_clean.py  part2_packed.py
2024/day4/: main.cpp
2024/day5/: part1.py  part2.py
2024/day6/: main.cpp
2024/day7/: part1.py  part2.py
2024/day8/: CMakeLists.txt  main.cpp
2024/day9/: main.cpp  part1.py
2025/Day 2 - C++/: Day 2.cpp
2025/Day 3 - Rust/: main.rs
2025/Day 5 - Powershell/: main.ps1
2025/Day 6 - Ruby/: main.rb
2025/Day 9 - TS/: main.ts
2025/Day1 - Java/: Day1.java
2025/Day4 - C/: main.c
2025/Day7 - PHP/: answer.php  index.php  style.css
